<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:weightSum="13"
    android:background="@drawable/background">
   <ImageButton
       android:layout_width="106dp"
       android:layout_height="79dp"
       android:background="@drawable/logo"
       android:id="@+id/go_back"/>

    <GridLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:columnCount="4"
        android:rowCount="8"
        android:layout_gravity="center_horizontal"
        >


        <EditText
            android:id="@+id/input_host_address"
            style="@style/RegisterScreenInput"
            android:layout_column="2"
            android:layout_row="1"
            android:inputType="text"
            android:text="10.4.41.59"/>


        <EditText
            android:id="@+id/input_host_port"
            android:layout_column="2"
            android:layout_row="0"
            android:inputType="textAutoComplete"
            android:text="8080"
            style="@style/RegisterScreenInput"/>

        <EditText
            android:id="@+id/input_username"
            android:layout_column="2"
            android:layout_row="2"
            android:inputType="textPersonName"
            android:text="pjacobr"
            style="@style/RegisterScreenInput"/>

        <EditText
            android:id="@+id/input_first_name"
            android:layout_column="2"
            android:layout_row="4"
            android:inputType="textPersonName"
            android:text="Jacob"
            style="@style/RegisterScreenInput"/>

        <EditText
            android:id="@+id/input_last_name"
            android:layout_column="2"
            android:layout_row="5"
            android:inputType="textPersonName"
            android:text="Pettingill"
            style="@style/RegisterScreenInput"/>

        <EditText
            android:id="@+id/input_password"
            android:layout_column="2"
            android:layout_row="3"
            style="@style/RegisterScreenInput"
            android:inputType="textPassword"
            android:text="testing" />

        <EditText
            android:id="@+id/input_email"
            android:layout_column="2"
            android:layout_row="6"
            style="@style/RegisterScreenInput"
            android:inputType="textEmailAddress"
            android:text="@string/jacob_email" />

        <RadioGroup
            android:id="@+id/input_gender"
            android:layout_column="2"
            android:layout_row="7"
            android:orientation="horizontal"
            android:layout_gravity="left|center_horizontal"
            android:weightSum="1">

            <RadioButton
                android:id="@+id/gender_female"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_column="2"
                android:layout_marginRight="10dp"
                android:checked="false"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/gender_male"
                android:layout_width="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_height="70dp"
                android:layout_gravity="fill_horizontal"
                android:checked="true"
                android:text="@string/male" />

        </RadioGroup>

        <TextView
            android:id="@+id/title_first_name"
            android:layout_column="1"
            android:layout_row="4"
            android:text="@string/first_name"
            style="@style/GridCellTitle" />

        <TextView
            android:id="@+id/title_host_port"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/host_port"
            style="@style/GridCellTitle"
            />

        <TextView
            android:id="@+id/title_host_address"
            android:layout_column="1"
            android:layout_row="1"
            style="@style/GridCellTitle"
            android:text="@string/host_address"
            />

        <TextView
            android:id="@+id/title_username"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/username"
            style="@style/GridCellTitle"
            />

        <TextView
            android:id="@+id/title_password"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/password"
            style="@style/GridCellTitle"
            />

        <TextView
            android:id="@+id/title_last_name"
            android:layout_column="1"
            android:layout_row="5"
            style="@style/GridCellTitle"
            android:text="@string/last_name"
            />

        <TextView
            android:id="@+id/title_gender"
            android:layout_column="1"
            android:layout_marginRight="10dp"
            android:layout_row="7"
            style="@style/GridCellTitle"
            android:text="@string/gender"
            />

        <TextView
            android:id="@+id/title_email"
            android:layout_column="1"
            android:layout_marginRight="10dp"
            android:layout_row="6"
            style="@style/GridCellTitle"
            android:text="@string/email"
            />

    </GridLayout>



        <Button
            android:id="@+id/input_register"
            android:layout_width="wrap_content"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_weight="0"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        />
</LinearLayout>